--- a/views/home.html
+++ b/views/home.html
@@ -13,49 +13,44 @@
                   <thead>
                     <tr>
                         <th>Fecha</th>
-                        <th>Tipo</th>
-                        <th>Número</th>
                         <th>Proveedor</th>
                         <th>Descripción</th>
                         <th>P.Venta</th>
                         <th>Centro de Costos</th>
+                        <th>Estado</th>
                     </tr>
                   </thead>
                     <tr>
                         <td>05/02/20</td>
-                        <td>Factura</td>
-                        <td>002-1327</td>
                         <td>Virgilio Chipana Ortiz</td>
                         <td>Reparación motor bomba de agua</td>
                         <td>S/. 420.00</td>
                         <td>Electrobomba Safari 2HP Pileta</td>
+                        <td>Pendiente</td>
                     </tr>
                     <tr>
                         <td>04/02/20</td>
-                        <td>Factura</td>
-                        <td>A12-267512</td>
                         <td>Homecenters Peruanos S.A.</td>
                         <td>Válvula de ingreso inteligente</td>
                         <td>S/. 27.74</td>
                         <td>Sanitarios / Materiales</td>
+                        <td>Pendiente</td>
                     </tr>
                     <tr>
                         <td>03/02/20</td>
-                        <td>Factura</td>
-                        <td>F03-1660</td>
                         <td>Comercial e Industrial Branfisa</td>
                         <td>Reparación de lustradora</td>
                         <td>S/. 1360.00</td>
                         <td>Lustradora Chasky</td>
+                        <td>Terminado</td>
                     </tr>
                     <tr>
                         <td>03/02/20</td>
-                        <td>Factura</td>
-                        <td>001-8048</td>
                         <td>Lidegraf S.A.C</td>
                         <td>Libros de resgistro oficio</td>
                         <td>S/. 390.00</td>
                         <td>Recepción 1</td>
+                        <td>Pendiente</td>
                     </tr>
 
                   
