--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,7 @@
 <form action="">
 
 
-    <section class="container" style="margin: 0px auto 0; width: 100%; ">
+    <section class="container" style="margin: 0px auto 0; width: 100%; padding-right: 250px; ">
 
             
                         <section class="container" id="login" style="margin: 30px auto 0; width: 430px;">
