--- a/views/mant-area.html
+++ b/views/mant-area.html
@@ -3,17 +3,21 @@
         <h3>Area</h3>
     </div>
 
-    <div class="row" style="text-align: center;">
+    <div class="row" style="margin-top: 6%;">
 
-        <div class="input-field col s11 l11">
+        <div class="col s2 l2">
+
+        </div>
+
+        <div class="input-field col s8 l8">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de la Partida</label>
         </div>
-        
-        <div class="input-field col s1 l1">
-            <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
-        </div>
 
+        <div class="col s2 l2">
+
+        </div>
+        
     </div>
 
     <div class="row" style="text-align: center;">
