--- a/views/mant-cc-obras.html
+++ b/views/mant-cc-obras.html
@@ -5,13 +5,9 @@
     </div>
 
     <div class="row center">
-        <div class="input-field col s11 l11">
+        <div class="input-field col s12 l12">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de la Obra</label>
-        </div>
-    
-        <div class="input-field col s1 l1">
-            <a class="btn-small"><i class="material-icons">search</i></a>
         </div>
     </div>
 
@@ -73,7 +69,7 @@
         </div>
     </div>
 
-    <div class="row" style="text-align: center; margin-top: 8%;">
+    <div class="row center">
             <a class="btn">Nuevo</a>
             <a class="btn">Guardar</a>
             <a class="btn">Modificar</a>
