--- a/views/mant-partidas-subpartidas.html
+++ b/views/mant-partidas-subpartidas.html
@@ -3,7 +3,7 @@
         <h4>Partidas y Sub-Partidas</h4>
     </div>
     
-    <div class="row center">
+    <div class="row center" style="padding-top: 4%;">
             <form action="#">
                 <p>
                     <label style="margin-right: 50px;">
@@ -19,20 +19,24 @@
             </form>
     </div>
 
-    <div class="row" style="margin-top: 8%;">
+    <div class="row" style="margin-top: 6%;">
 
-        <div class="input-field col s11 l11">
+        <div class="col s2 l2">
+
+        </div>
+
+        <div class="input-field col s8 l8">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de la Partida</label>
         </div>
         
-        <div class="input-field col s1 l1">
-            <a class="waves-effect waves-light btn-small"><i class="material-icons">search</i></a>
+        <div class="col s2 l2">
+
         </div>
 
     </div>
 
-    <div class="row" style="text-align: center; margin-top: 8%;">
+    <div class="row center">
         <a class="btn">Nuevo</a>
             <a class="btn">Guardar</a>
             <a class="btn">Modificar</a>
