--- a/views/mant-proveedores.html
+++ b/views/mant-proveedores.html
@@ -5,17 +5,15 @@
     </div>
 
     <div class="row">
-       
-        <div class="input-field col s4 l4">
+        <div class="input-field col s6 l6">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Razón Social / RUC</label>
         </div>
     
-        <div class="input-field col s8 l8">
+        <div class="input-field col s6 l6">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Nombre de contacto</label>
         </div>
-
     </div>
 
     <div class="row">
@@ -52,7 +50,7 @@
 
     </div>
 
-    <div class="row" style="text-align: center;">
+    <div class="row center">
 
         <a class="btn">Nuevo</a>
         <a class="btn">Guardar</a>
