--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -15,9 +15,9 @@
 
       <div class="collapsible-body">
         <a href="./mantenimiento-centro-de-costos-y-obras" style="line-height: 25px;">Centro de Costos / Obras</a>
-        <a href="#!">Partidas y Sub Partidas</a>
-        <a href="">Area</a>
-        <a href="">Proveedores</a>
+        <a href="./mantenimiento-partidas-sub-partidas">Partidas y Sub Partidas</a>
+        <a href="./mantenimiento-area">Area</a>
+        <a href="./mantenimiento-proveedores">Proveedores</a>
       </div>
     </li>
 
