Se hicieron modificaciones en el menu

--- a/views/consulta-op-obras.html
+++ b/views/consulta-op-obras.html
@@ -1,17 +1,18 @@
 <div class="container">
 
     <div class="row centro cabecera">
-        <h3>Centro de Costos y Obras</h3>
+        <h3>Consultas de operaciones por Obras</h3>
     </div>
     
     <div class="row">
-        <div class="input-field col s7 l7">
+        <div class="input-field col s8 l8">
             <input type="text" name="" id="" value="">
-            <label for="">Buscar</label>
+            <label for="">Por nombre</label>
         </div>
 
-        <div class="input-field col s1 l1">
-            <a class="btn-small"><i class="material-icons">search</i></a>
+        <div class="input-field col s4 l4">
+            <input type="text" name="" id="" value="">
+            <label for="">Por código</label>
         </div>
     </div>
 
@@ -30,25 +31,26 @@
                         <th>Fecha</th>
                         <th>Proyecto</th>
                         <th>Estado</th>
-                        
+                        <th></th>
                     </tr>
                   </thead>
                     <tr>
                         <td>05/02/20</td>
                         <td>Defensa Civil 2020</td>
                         <td>Pendiente</td>
-                        
+                        <th><a href="./detalle-operaciones-obras">Ver más</a></th>
                     </tr>
                     <tr>
                         <td>04/02/20</td>
                         <td>Piscina Semi Olímpica</td>
                         <td>Terminado</td>
-                        
+                        <th><a href="./detalle-operaciones-obras">Ver más</a></th>
                     </tr>
                     <tr>
                         <td>03/02/20</td>
                         <td>Aire Acondicionado YORK 18000 BTU</td>
                         <td>Terminado</td>
+                        <th><a href="./detalle-operaciones-obras">Ver más</a></th>
                     </tr>
               </table>
             </div>
