--- a/views/detalle-op-obras.html
+++ b/views/detalle-op-obras.html
@@ -2,18 +2,18 @@
     
     <div class="row cabecera">
 
-        <div class="col s12 l6">
+        <div class="col s12 l5">
             <span style="font-size: 24px;">Centro de Costos 3</span>
         </div>
 
         <div class="col s12 l3">
-            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+            <a href="./registro-orden-compra-servicios" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
             <label for="" style="color: #454545; font-size: 14px;">Nueva O.Compra</label>
         </div>
 
-        <div class="col s12 l3">
-            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-            <label for="" style="color: #454545; font-size: 14px;">Nueva O.Servicio</label>
+        <div class="col s12 l4">
+            <a href="./registro-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+            <label for="" style="color: #454545; font-size: 14px;">Nuevo Requerimiento</label>
         </div>
 
     </div>
