--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -22,17 +22,26 @@
     </li>
 
     <li>
-
       <div class="collapsible-header">
-        <i class="material-icons">library_add</i><a href="" style="line-height: 30px;">Registro de Compras/Obras</a>
+        <i class="material-icons">library_add</i><a href="#!">Registros</a>
+      </div>
+
+      <div class="collapsible-body">
+        <a href="./registro-requerimientos" style="line-height: 25px; margin-top: 15px;">Registro de Requerimientos</a>
+        <a href="./registro-orden-compra-servicios" style="line-height: 25px; margin-top: 15px;">Registro de Orden de Compra o Servicios</a>
       </div>
     </li>
 
     <li>
-
       <div class="collapsible-header">
-        <i class="material-icons">remove_red_eye</i><a href="">Consultas</a>
+        <i class="material-icons">remove_red_eye</i><a href="#!">Consultas</a>
       </div>
+
+      <div class="collapsible-body">
+        <a href="./consulta-operaciones-obras" style="line-height: 25px; margin-top: 15px;">Consulta de Operaciones por Obra</a>
+        
+      </div>
+
     </li>
 
     <li>
