--- a/views/registro-requerimientos.html
+++ b/views/registro-requerimientos.html
@@ -109,9 +109,19 @@
     
 
       <div class="row" style="text-align: right;">
-        <a class="btn" style="background-color:#888888;">Registro de Comprobante</a>
-        <a class="btn" style="background-color:#888888;"><i class="material-icons">attach_file</i>Ver Adjuntos</a>
-      </div>
+        <a href="./registro-comprobante" class="btn" style="background-color:#888888;">Registro de Comprobante</a>
+        <a href="#modal1" class="btn modal-trigger" style="background-color:#888888;"><i class="material-icons">attach_file</i>Ver Adjuntos</a>
+      
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+              <h4>Modal Header</h4>
+              <p>A bunch of text</p>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+    </div>
 
       <div class="row" style="text-align: center;">
         <a class="btn">Nuevo</a>
