--- a/views/registro-requerimientos.html
+++ b/views/registro-requerimientos.html
@@ -111,7 +111,8 @@
       <div class="row" style="text-align: right;">
         <a href="./registro-comprobante" class="btn" style="background-color:#888888;">Registro de Comprobante</a>
         <a href="#modal1" class="btn modal-trigger" style="background-color:#888888;"><i class="material-icons">attach_file</i>Ver Adjuntos</a>
-      
+        <button data-target="modal1" class="btn modal-trigger">Modal</button>
+
         <div id="modal1" class="modal">
             <div class="modal-content">
               <h4>Modal Header</h4>
