--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -27,8 +27,7 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="./registro-requerimientos" style="line-height: 25px; margin-top: 15px;">Registro de Requerimientos</a>
-        <a href="./registro-orden-compra-servicios" style="line-height: 25px; margin-top: 15px;">Registro de Orden de Compra o Servicios</a>
+        <a href="./registro-operaciones-centro-costos-obras" style="line-height: 25px; margin-top: 15px;">Registro de Operaciones por Centro de Costos u Obra</a>
       </div>
     </li>
 
@@ -38,7 +37,8 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="./consulta-operaciones-obras" style="line-height: 25px; margin-top: 15px;">Consulta de Operaciones por Obra</a>
+        <a href="./consultar-requerimientos" style="line-height: 25px; margin-top: 15px;">Consulta de Requerimientos</a>
+        <a href="./consultar-orden-compra-servicios" style="line-height: 25px; margin-top: 15px;">Consulta de Orden de Compra o Servicios</a>
       </div>
     </li>
 
