--- a/views/reg-op-centrocostos-obras.html
+++ b/views/reg-op-centrocostos-obras.html
@@ -2,21 +2,36 @@
     
     <div class="row cabecera">
 
-        <div class="col s12 l5">
-            <span style="font-size: 24px;">Centro de Costos 3</span>
+        <div class="col s12 l12">
+            <span style="font-size: 24px;">Registro de Operaciones por Centro de Costos u Obras</span>
         </div>
+    </div>
 
-        <div class="col s12 l3">
-            <a href="./registro-orden-compra-servicios" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-            <label for="" style="color: #454545; font-size: 14px;">Nueva O.Compra</label>
+    <div class="row">
+        <div class="input-field col s8 l8">
+            <input type="text" name="" id="" value="">
+            <label for="">Por nombre</label>
         </div>
+  
+        <div class="input-field col s4 l4">
+            <input type="text" name="" id="" value="">
+            <label for="">Por código</label>
+        </div>
+    </div>
+  
 
-        <div class="col s12 l4">
-            <a href="./registro-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+  <div class="row">
+        <div class="col s12 l3 right">
+            <a href="./consultar-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
             <label for="" style="color: #454545; font-size: 14px;">Nuevo Requerimiento</label>
         </div>
 
-    </div>
+        <div class="col s12 l3 right">
+            <a href="./consultar-orden-compra-servicios" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+            <label for="" style="color: #454545; font-size: 14px;">Nueva Orden</label>
+        </div>
+
+  </div>
 
     <div class="row">
         <div class="col s12 l12">
