Se acutalizó el orden del menu

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -4,9 +4,10 @@
 
     <title>{{titulo_pagina}}</title>
 
+    {{> cabecera}}
     <script src="/app/js/main.js"></script>
 
-    {{> cabecera}}
+    <script src="/app/js/{{script_name}}.js"></script>
 
 </head>
 <body>
