--- a/views/reg-op-centrocostos-obras.html
+++ b/views/reg-op-centrocostos-obras.html
@@ -7,88 +7,82 @@
         </div>
     </div>
 
+
     <div class="row">
-        <div class="input-field col s8 l8">
+      <div class="col s12 l3 right">
+          <a href="./consultar-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+          <label for="" style="color: #454545; font-size: 14px;">Nuevo Requerimiento</label>
+      </div>
+
+      <div class="col s12 l3 right">
+          <a href="./consultar-orden-compra-servicios" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+          <label for="" style="color: #454545; font-size: 14px;">Nueva Orden</label>
+      </div>
+    </div>
+
+    <div class="row">
+        <div class="input-field col s12 l12">
             <input type="text" name="" id="" value="">
             <label for="">Por nombre</label>
         </div>
   
-        <div class="input-field col s4 l4">
-            <input type="text" name="" id="" value="">
-            <label for="">Por código</label>
-        </div>
+        
     </div>
   
-
-  <div class="row">
-        <div class="col s12 l3 right">
-            <a href="./consultar-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-            <label for="" style="color: #454545; font-size: 14px;">Nuevo Requerimiento</label>
-        </div>
-
-        <div class="col s12 l3 right">
-            <a href="./consultar-orden-compra-servicios" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-            <label for="" style="color: #454545; font-size: 14px;">Nueva Orden</label>
-        </div>
-
-  </div>
-
     <div class="row">
-        <div class="col s12 l12">
-            
-            <div class="card horizontal">
-              
-              <div class="card-stacked">
-                <div class="card-content">
-                    <div class="col s3 l6" style="text-align: left;">
-                        <p>Orden de Compra - 0001</p>
-                    </div>
-                    <div class="col s3 l3">
-                        <p>Fecha emisión: </p>
-                    </div>
-                    
-                    <div class="col s3 l3" style="text-align: right;">
-                        <p>Orden de Compra - 0001</p>
-                    </div>
-
-                </div>
-
-                <div class="card-action" style="text-align: right;">
-                  <a href="#">Ver detalle</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
+      <div class="col s12">
+        <ul class="tabs">
+          <li class="tab col s3"><a href="#test1">Requerimientos</a></li>
+          <li class="tab col s3"><a class="active" href="#test2">Orden de Compra</a></li>
+          <li class="tab col s3"><a href="#test3">Orden de Servicio</a></li>
+          
+        </ul>
+      </div>
+      <div id="test1" class="col s12">
           <div class="col s12 l12">
-            
-            <div class="card horizontal">
-              
-              <div class="card-stacked">
-                <div class="card-content">
-                    <div class="col s3 l6" style="text-align: left;">
-                        <p>Orden de Compra - 0001</p>
-                    </div>
-                    <div class="col s3 l3">
-                        <p>Fecha emisión: </p>
-                    </div>
-                    
-                    <div class="col s3 l3" style="text-align: right;">
-                        <p>Orden de Compra - 0001</p>
-                    </div>
-
-                </div>
-
-                <div class="card-action" style="text-align: right;">
-                  <a href="#">Ver detalle</a>
-                </div>
+            <div class="card">
+              <div class="card-content black-text">
+                <span class="card-title">Requerimiento 01</span>
+                <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">VER DETALLE</a>
               </div>
             </div>
           </div>
+      </div>
 
-    </div>
-
-
+      <div id="test2" class="col s12">
+        <div class="col s12 l12">
+          <div class="card">
+            <div class="card-content black-text">
+              <span class="card-title">Orden de Compra 01</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">VER DETALLE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="test3" class="col s12">
+        <div class="col s12 l12">
+          <div class="card">
+            <div class="card-content black-text">
+              <span class="card-title">Orden de Servicio 01</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">VER DETALLE</a>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
 
     
