Se hicieron modificaciones

--- a/views/consultar-orden-compra-servicios.html
+++ b/views/consultar-orden-compra-servicios.html
@@ -5,12 +5,27 @@
     </div>
 
     <div class="row">
+        <div class="col s4 l4">
+            <label for="">Tipo de Orden</label>
+            <select class="browser-default">
+                <option value="" disabled selected></option>
+                <option value="">Orden de Compra</option>
+                <option value="">Orden de Servicio</option>
+            </select>
+        </div>
+
+        <div class="col s5 l5">
+
+        </div>
+
         <div class="input-field col s3 l3">
             <label>Fecha Inicio</label>
             <input placeholder="" type="date" name="defaultDate" class="datepicker">
         </div>
-        
 
+    </div>
+
+    <div class="row">
         <div class="input-field col s3 l3">
             <input placeholder="" type="text" class="">
             <label>Código Operación</label>
@@ -18,7 +33,12 @@
 
         <div class="input-field col s3 l3">
             <input placeholder="" type="text" class="">
-            <label>Código Orden Compra</label>
+            <label>Código Orden de Compra</label>
+        </div>
+
+        <div class="input-field col s3 l3">
+            <input placeholder="" type="text" class="">
+            <label>Código Orden de Servicio</label>
         </div>
 
         <div class="input-field col s3 l3">
@@ -97,9 +117,9 @@
                 <span>Agregar Item</span>
             </div>
 
-           </div>
+          </div>
         </div>
-      </div>
+    </div>
 
     
 
