--- a/views/reg-op-centrocostos-obras.html
+++ b/views/reg-op-centrocostos-obras.html
@@ -23,17 +23,20 @@
     <div class="row">
         <div class="input-field col s12 l12">
             <input type="text" name="" id="" value="">
-            <label for="">Por nombre</label>
+            <label for="">Por nombre de Centro de Costos u Obra</label>
         </div>
   
-        
     </div>
   
     <div class="row">
-      <div class="col s12">
+
+    </div>
+
+    <div class="row">
+      <div class="col s12 l12">
         <ul class="tabs">
-          <li class="tab col s3"><a href="#test1">Requerimientos</a></li>
-          <li class="tab col s3"><a class="active" href="#test2">Orden de Compra</a></li>
+          <li class="tab col s3"><a class="active" href="#test1">Requerimientos</a></li>
+          <li class="tab col s3"><a href="#test2">Orden de Compra</a></li>
           <li class="tab col s3"><a href="#test3">Orden de Servicio</a></li>
           
         </ul>
@@ -42,13 +45,30 @@
           <div class="col s12 l12">
             <div class="card">
               <div class="card-content black-text">
-                <span class="card-title">Requerimiento 01</span>
-                <p>I am a very simple card. I am good at containing small bits of information.
-                I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">VER DETALLE</a>
-              </div>
+                          <table>
+                              <thead>
+                                  <tr>
+                                      <th>Requerimientos</th>
+                                      <th>Fecha de emisión</th>
+                                  </tr>
+                              </thead>
+                                  <tr>
+                                      <td>Sellador CPPG GL 65005</td>
+                                      <td>05/07/2019</td>
+                                      <td><a href="">Ver detalle</a></td>
+                                  </tr>
+                                  <tr>
+                                      <td>Lija Agua ASA Grano 120 63118</td>
+                                      <td>05/02/2020</td>
+                                      <td><a href="">Ver detalle</a></td>
+                                  </tr>
+                                  <tr>
+                                      <td>Rodillo Toro Amarillo 9 PG 69876</td>
+                                      <td>30/01/2020</td>
+                                      <td><a href="">Ver detalle</a></td>
+                                  </tr>
+                          </table>
+               </div>
             </div>
           </div>
       </div>
@@ -57,13 +77,30 @@
         <div class="col s12 l12">
           <div class="card">
             <div class="card-content black-text">
-              <span class="card-title">Orden de Compra 01</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">VER DETALLE</a>
-            </div>
+              <table>
+                <thead>
+                    <tr>
+                        <th>Órdenes de Compra</th>
+                        <th>Fecha de emisión</th>
+                    </tr>
+                </thead>
+                    <tr>
+                        <td>Orden de Compra - 0001</td>
+                        <td>01/01/2020</td>
+                        <td><a href="">Ver detalle</a></td>
+                    </tr>
+                    <tr>
+                        <td>Orden de Compra - 0002</td>
+                        <td>15/01/2020</td>
+                        <td><a href="">Ver detalle</a></td>
+                    </tr>
+                    <tr>
+                        <td>Orden de Compra - 0003</td>
+                        <td>07/02/2020</td>
+                        <td><a href="">Ver detalle</a></td>
+                    </tr>
+            </table>
+</div>
           </div>
         </div>
       </div>
@@ -71,14 +108,30 @@
         <div class="col s12 l12">
           <div class="card">
             <div class="card-content black-text">
-              <span class="card-title">Orden de Servicio 01</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">VER DETALLE</a>
-              
-            </div>
+              <table>
+                <thead>
+                    <tr>
+                        <th>Órdenes de Servicio</th>
+                        <th>Fecha de emisión</th>
+                    </tr>
+                </thead>
+                    <tr>
+                        <td>Orden de Servicio - 0001</td>
+                        <td>01/01/2020</td>
+                        <td><a href="">Ver detalle</a></td>
+                    </tr>
+                    <tr>
+                        <td>Orden de Servicio - 0002</td>
+                        <td>15/01/2020</td>
+                        <td><a href="">Ver detalle</a></td>
+                    </tr>
+                    <tr>
+                        <td>Orden de Servicio - 0003</td>
+                        <td>07/02/2020</td>
+                        <td><a href="">Ver detalle</a></td>
+                    </tr>
+            </table>
+</div>
           </div>
         </div>
       </div>
