--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -14,9 +14,9 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="./mantenimiento-centro-de-costos-y-obras" style="line-height: 25px;">Centro de Costos / Obras</a>
-        <a href="./mantenimiento-partidas-sub-partidas">Partidas y Sub Partidas</a>
-        <a href="./mantenimiento-area">Area</a>
+        <a href="./mantenimiento-centro-de-costos-y-obras" style="border-bottom: solid 1px; border-color: #0034AC;">Centro de Costos / Obras</a>
+        <a href="./mantenimiento-partidas-sub-partidas" style="border-bottom: solid 1px; border-color: #0034AC;" >Partidas y Sub Partidas</a>
+        <a href="./mantenimiento-area" style="border-bottom: solid 1px; border-color: #0034AC;">Area</a>
         <a href="./mantenimiento-proveedores">Proveedores</a>
       </div>
     </li>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="./registro-operaciones-centro-costos-obras" style="line-height: 25px; margin-top: 15px;">Registro de Operaciones por Centro de Costos u Obra</a>
+        <a href="./registro-operaciones-centro-costos-obras" style="line-height: 25px; padding-bottom:20px">Registro de Operaciones por Centro de Costos u Obra</a>
       </div>
     </li>
 
@@ -37,8 +37,8 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="./consultar-requerimientos" style="line-height: 25px; margin-top: 15px;">Consulta de Requerimientos</a>
-        <a href="./consultar-orden-compra-servicios" style="line-height: 25px; margin-top: 15px;">Consulta de Orden de Compra o Servicios</a>
+        <a href="./consultar-requerimientos" style="border-bottom: solid 1px; border-color: #0034AC;">Consulta de Requerimientos</a>
+        <a href="./consultar-orden-compra-servicios" style="line-height: 25px; padding-top: 10px; padding-bottom:20px;">Consulta de Orden de Compra o Servicios</a>
       </div>
     </li>
 
