--- a/views/mant-area.html
+++ b/views/mant-area.html
@@ -11,7 +11,7 @@
 
         <div class="input-field col s8 l8">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
-            <label>Nombre de la Partida</label>
+            <label>Nombre del área</label>
         </div>
 
         <div class="col s2 l2">
