--- a/views/mant-cc-obras.html
+++ b/views/mant-cc-obras.html
@@ -7,7 +7,7 @@
     <div class="row center">
         <div class="input-field col s12 l12">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
-            <label>Nombre de la Obra</label>
+            <label>Nombre del Centro de Costos u Obra</label>
         </div>
     </div>
 
