--- a/views/consultar-requerimientos.html
+++ b/views/consultar-requerimientos.html
@@ -95,16 +95,16 @@
                         </tr>
                     
                 </table>
+                <div class="row">
+                    <div class="col s12 l4">
+                        <a href="#" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+                        <label for="" style="color: #454545; font-size: 16px;">Agregar item</label>
+                    </div>
+                </div>
             </div>
-
-            <div class="card-action">
-                <a class="btn-floating btn-small green"><i class="material-icons">add</i></a>
-                <span>Agregar Item</span>
-            </div>
-
-           </div>
         </div>
-      </div>
+    </div>
+</div>
 
     
 
