--- a/views/consultar-orden-compra-servicios.html
+++ b/views/consultar-orden-compra-servicios.html
@@ -110,12 +110,12 @@
                         </tr>
                     
                 </table>
-            </div>
-
-            <div class="card-action">
-                <a class="btn-floating btn-small green"><i class="material-icons">add</i></a>
-                <span>Agregar Item</span>
-            </div>
+                <div class="row">
+                    <div class="col s12 l4">
+                        <a href="#" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+                        <label for="" style="color: #454545; font-size: 16px;">Agregar item</label>
+                    </div>
+                </div>
 
           </div>
         </div>
@@ -125,7 +125,44 @@
 
       <div class="row" style="text-align: right;">
         <a class="waves-effect waves-light btn" style="background-color:#888888;">Registro de Comprobante</a>
-        <a class="waves-effect waves-light btn" style="background-color:#888888;"><i class="material-icons">attach_file</i>Ver Adjuntos</a>
+        <a href="#modal1" class="btn modal-trigger" style="background-color:#888888;"><i class="material-icons">attach_file</i>Ver Adjuntos</a>
+        
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Tipo de documento</th>
+                                <th>Número de documento</th>
+                                <th>Moneda</th>
+                                <th>Total</th>
+                            </tr>
+                        </thead>
+                        
+                            <tr>
+                                <td>Boleta</td>
+                                <td>B001-0045</td>
+                                <td>Dólares</td>
+                                <td>200.00</td>
+                                <td><a href="./registro-comprobante">Ver detalle</a></td>
+                            </tr>
+                            <tr>
+                                <td>Factura</td>
+                                <td>F005-3452</td>
+                                <td>Soles</td>
+                                <td>1300.00</td>
+                                <td><a href="./registro-comprobante">Ver detalle</a></td>
+                            </tr>
+                            <tr>
+                                <td>Factura</td>
+                                <td>F010-0065</td>
+                                <td>Soles</td>
+                                <td>600.00</td>
+                                <td><a href="./registro-comprobante">Ver detalle</a></td>
+                            </tr>
+                    </table>
+                </div>
+            </div>
       </div>
 
       <div class="row" style="text-align: center;">
