--- a/views/reg-op-centrocostos-obras.html
+++ b/views/reg-op-centrocostos-obras.html
@@ -47,7 +47,7 @@
               <div class="card-content black-text">
                           <table>
                               <thead>
-                                  <tr>
+                                  <tr style="color:#002272;">
                                       <th>Requerimientos</th>
                                       <th>Fecha de emisión</th>
                                   </tr>
@@ -107,7 +107,7 @@
       <div id="test3" class="col s12">
         <div class="col s12 l12">
           <div class="card">
-            <div class="card-content black-text">
+            <div class="card-content">
               <table>
                 <thead>
                     <tr>
