--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -37,8 +37,8 @@
       </div>
 
       <div class="collapsible-body">
-        <a href="./consultar-requerimientos" style="border-bottom: solid 1px; border-color: #0034AC;">Consulta de Requerimientos</a>
-        <a href="./consultar-orden-compra-servicios" style="line-height: 25px; padding-top: 10px; padding-bottom:20px;">Consulta de Orden de Compra o Servicios</a>
+        <a href="./consultar-requerimientos" style="line-height: 30px; padding-bottom: 10px; border-bottom: solid 1px; border-color: #0034AC;">Consulta de Requerimientos</a>
+        <a href="./consultar-orden-compra-servicios" style="line-height: 30px; padding-top: 10px; padding-bottom:20px;">Consulta de Orden de Compra o Servicios</a>
       </div>
     </li>
 
