--- a/views/consultar-orden-compra-servicios.html
+++ b/views/consultar-orden-compra-servicios.html
@@ -6,16 +6,16 @@
 
     <div class="row">
         <div class="col s4 l4">
+           <h5 style="font-weight: bold;">Centro de Costos</h5>
+        </div>
+
+        <div class="col s5 l5">
             <label for="">Tipo de Orden</label>
             <select class="browser-default">
                 <option value="" disabled selected></option>
                 <option value="">Orden de Compra</option>
                 <option value="">Orden de Servicio</option>
             </select>
-        </div>
-
-        <div class="col s5 l5">
-
         </div>
 
         <div class="input-field col s3 l3">
