--- a/views/mant-proveedores.html
+++ b/views/mant-proveedores.html
@@ -28,22 +28,40 @@
     </div>
 
     <div class="row">
-        <div class="col s6 l6">
-        <label>Distrito</label>
-            <select class="browser-default">
-                <option value="" disabled selected>Elija un distrito</option>
-                <option value="1">Option 1</option>
-                <option value="2">Option 2</option>
-                <option value="3">Option 3</option>
-            </select>
+        <div class="col s3 l3">
+            <label>Departamento</label>
+                <select class="browser-default">
+                    <option value="" disabled selected>Elija un departamento</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
+        </div>
+        <div class="col s3 l3">
+            <label>Provincia</label>
+                <select class="browser-default">
+                    <option value="" disabled selected>Elija un provincia</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
+        </div>
+        <div class="col s3 l3">
+            <label>Distrito</label>
+                <select class="browser-default">
+                    <option value="" disabled selected>Elija un distrito</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
         </div>
     
-        <div class="input-field col s3 l3">
+        <div class="input-field col s2 l2">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Teléfono</label>
         </div>
 
-        <div class="input-field col s3 l3">
+        <div class="input-field col s1 l1">
             <input type="text" name="" id="nombre" value="{{Nombre}}">
             <label>Anexo</label>
         </div>
