--- a/views/reg-op-centrocostos-obras.html
+++ b/views/reg-op-centrocostos-obras.html
@@ -9,14 +9,16 @@
 
 
     <div class="row">
-      <div class="col s12 l3 right">
-          <a href="./consultar-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-          <label for="" style="color: #454545; font-size: 14px;">Nuevo Requerimiento</label>
-      </div>
-
-      <div class="col s12 l3 right">
+      
+      <div class="col s12 l4 right">
           <a href="./consultar-orden-compra-servicios" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-          <label for="" style="color: #454545; font-size: 14px;">Nueva Orden</label>
+          <a href="./consultar-orden-compra-servicios" class="btn-flat" style="line-height: 60px;">Nueva Orden</a>
+
+      </div>
+      
+      <div class="col s12 l4 right">
+          <a href="./consultar-requerimientos" class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+          <a href="./consultar-requerimientos" class="btn-flat" style="line-height: 60px;">Nuevo Requerimiento</a>
       </div>
     </div>
 
